@@ -1,3 +1,8 @@
+2017-12-18  Ville Voutilainen  <ville.voutilainen@gmail.com>
+
+	PR libstdc++/68430
+	* testsuite/20_util/is_constructible/68430.cc: New.
+
 2017-12-16  Martin Sebor  <msebor@redhat.com>
 
 	PR tree-optimization/83239
